--- a/.golangci.yml
+++ b/.golangci.yml
@@ -9,7 +9,8 @@ run:
   modules-download-mode: readonly
 
 output:
-  format: colored-line-number
+  formats:
+    - format: colored-line-number
   print-issued-lines: true
   print-linter-name: true
   sort-results: true
@@ -36,6 +37,7 @@ linters:
     - prealloc       # Find slice declarations that could be preallocated
     - copyloopvar    # Check for loop variable copying (replaces exportloopref)
     - nilerr         # Find code that returns nil even if error is not nil
+    - shadow         # Check for shadowed variables
 
   disable:
     - exhaustive     # Too strict for switches
@@ -51,7 +53,6 @@ linters-settings:
     check-blank: false
 
   govet:
-    check-shadowing: true
     enable-all: true
 
   gocyclo:
