fix: golangci-lint caching

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,10 +33,11 @@ jobs:
         run: go mod verify
 
       - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v4
+        uses: golangci/golangci-lint-action@v8
         with:
-          version: latest
+          version: v2.2.0
           args: --timeout=5m --config=.golangci.yml
+          skip-cache: true
 
       - name: Run go vet
         run: go vet ./...
