--- a/.golangci.yml
+++ b/.golangci.yml
@@ -10,7 +10,7 @@ run:
 
 output:
   formats:
-    - format: colored-line-number
+    - colored-line-number
   print-issued-lines: true
   print-linter-name: true
   sort-results: true
